--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>ImdMinicurso</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+  <title>Angular First Application</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/list.png">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root><img src="assets/img/loading.gif" alt="Loading..."/></app-root>
 </body>
 </html>
